<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Kalian bisa membuat story melalui aplikasi ini dan nantinya story tersebut akan bisa dilihat oleh teman-teman lainnya!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk membagikan story Anda ke teman-teman?</string>
    <string name="message_main_page">Selamat Membuat Story Anda di Aplikasi Dicoding Story.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="next_btn">Selanjutnya</string>

    <string name="picture_story">Gambar Story</string>
    <string name="name">Nama</string>
    <string name="detail_story">Detail Story</string>
    <string name="created_on">Dibuat Pada :\u00A0</string>
    <string name="date">Tanggal</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba Lagi</string>
    <string name="timeout">Timeout</string>

    <string name="camera">Kamera</string>
    <string name="cameraX">Kamera X</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="description_story">Deskripsi Story</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>

    <string name="email_warning_invalid">Email yang dimasukkan salah</string>
    <string name="name_warning_empty">Tolong masukkan nama kamu</string>
    <string name="email_warning_empty">Tolong masukkan email kamu</string>
    <string name="password_warning_empty">Tolong masukkan password kamu</string>
    <string name="password_warning_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="password_warning_unique">Password harus memiliki huruf besar, karakter khusus, dan angka</string>
    <string name="fab">Tombol Tambah</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="location_realtime">Sertakan Lokasi Saat Ini</string>
</resources>